--- a/src/MauiSample/VideoView.xaml
+++ b/src/MauiSample/VideoView.xaml
@@ -3,9 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MauiSample"
              x:Class="MauiSample.VideoView">
-    <ContentView.Resources>
-        <local:VideoDrawable x:Key="drawable" />
-    </ContentView.Resources>
-    <GraphicsView Drawable="{StaticResource drawable}"
-                  x:Name="graphicsView"/>
+    <!--<ContentView.Resources>
+        <local:SkiaVideoDrawable x:Key="drawable" />
+    </ContentView.Resources>-->
+    <GraphicsView x:Name="graphicsView"/>
 </ContentView>
