--- a/src/MauiSample/VideoView.xaml
+++ b/src/MauiSample/VideoView.xaml
@@ -2,9 +2,10 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MauiSample"
+             xmlns:skia="clr-namespace:SkiaSharp.Views.Maui.Controls;assembly=SkiaSharp.Views.Maui.Controls"
              x:Class="MauiSample.VideoView">
-    <!--<ContentView.Resources>
-        <local:SkiaVideoDrawable x:Key="drawable" />
-    </ContentView.Resources>-->
-    <GraphicsView x:Name="graphicsView"/>
+    <!--<GraphicsView x:Name="graphicsView"/>-->
+    <skia:SKCanvasView x:Name="skiaView"
+                       PaintSurface="skiaView_PaintSurface"
+                       EnableTouchEvents="False" />
 </ContentView>
